test/should-fail/vsgc4173c.f3
/**
 * Regress test for VSGC-4173.
 *
 *  Improved support for forward references
 *
 * @compilearg -XDfwdRefOpt=lambda
 * @compile vsgc4173sub.f3
 * @test/warning
 */
